commit "login and Session"

--- a/Views/Admin/AddPost.cshtml
+++ b/Views/Admin/AddPost.cshtml
@@ -3,20 +3,23 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-10">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <h1>Add New Post</h1>
             <form method="post" asp-action="addPost" asp-controller="Admin" enctype="multipart/form-data">
-
 
                 <div class="row justify-content-center">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="col-form-label" asp-for=Title></label>
                             <input class="form-control" asp-for=Title />
+                            <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group">
                             <label class="col-form-label" asp-for=SubTital></label>
                             <input class="form-control" asp-for=SubTital />
+                            <span asp-validation-for="SubTital" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -32,6 +35,7 @@
                         <div class="form-group">
                             <label class="col-form-label" asp-for=Slug></label>
                             <input class="form-control" asp-for=Slug />
+                            <span asp-validation-for="Slug" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -39,12 +43,12 @@
                 <div class="form-group">
                     <label class="col-form-label" asp-for=Image></label>
                     <input class="form-control" asp-for=Image />
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="col-form-label" asp-for=Content></label>
-                    <textarea class="form-control" asp-for=Content id="editor">
-
-                    </textarea>
+                    <textarea class="form-control" asp-for=Content id="editor"></textarea>
+                    <span asp-validation-for="Content" class="text-danger"></span>
                 </div>
                 <button class="=btn btn-primary" type="submit">Creat Post</button>
             </form>
