--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -24,7 +24,7 @@
                                     <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                         Number of Posts
                                     </div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">150</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.NumberOfPost</div>
                                 </div>
                                 <div class="col-auto">
                                     <i class="fas fa-th-list fa-2x text-gray-300"></i>
@@ -32,28 +32,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>          
 
-                <!-- Earnings (Monthly) Card Example -->
-                <div class="col-xl-3 col-md-6 mb-4">
-                    <div class="card border-left-success shadow h-100 py-2">
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col mr-2">
-                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                        Comments (Total)
-                                    </div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">195,256</div>
-                                </div>
-                                <div class="col-auto">
-                                    <i class="fas fa-comments fa-2x text-gray-300"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Pending Requests Card Example -->
+                @*<!-- Pending Requests Card Example -->
                 <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-warning shadow h-100 py-2">
                         <div class="card-body">
@@ -70,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>*@
 
                 <div class="col-xl-3 col-md-6 mb-4">
                     <div class="card border-left-danger shadow h-100 py-2">
@@ -80,10 +61,29 @@
                                     <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                         Total Users
                                     </div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">02</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.NumberOfUser</div>
                                 </div>
                                 <div class="col-auto">
                                     <i class="fa-solid fa-address-card fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Earnings (Monthly) Card Example -->
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-success shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                        Date
+                                    </div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@DateTime.Now.ToString("dd/MMM/yyyy")</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-comments fa-2x text-gray-300"></i>
                                 </div>
                             </div>
                         </div>
