--- a/Views/Admin/UpdatePost.cshtml
+++ b/Views/Admin/UpdatePost.cshtml
@@ -3,6 +3,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-10">
+            <h1>Update Post</h1>
             <form method="post" asp-action="UpdatePost" asp-controller="Admin">
                 <div class="form-group">
                     <label class="col-form-label" asp-for=Id></label>
